WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225326
Crash in WebCore::nextBoundary()
https://bugs.webkit.org/show_bug.cgi?id=225326
Summary
Crash in WebCore::nextBoundary()
Julian Gonzalez
Reported
2021-05-03 13:12:30 PDT
e.g. 0 WebCore::Node::ref() const + 0 1 WTF::Ref<WebCore::Node, WTF::RawPtrTraits<WebCore::Node> >::Ref(WebCore::Node&) + 0 2 WTF::Ref<WebCore::Node, WTF::RawPtrTraits<WebCore::Node> >::Ref(WebCore::Node&) + 0 3 WebCore::TextIterator::range() const + 65 4 WebCore::CharacterIterator::range() const + 22 5 WebCore::nextBoundary(WebCore::VisiblePosition const&, unsigned int (*)(WTF::StringView, unsigned int, WebCore::BoundarySearchContextAvailability, bool&)) + 835 6 WebCore::endOfWord(WebCore::VisiblePosition const&, WebCore::EWordSide) + 449 7 WebCore::AlternativeTextController::respondToChangedSelection(WebCore::VisibleSelection const&) + 467 8 WebCore::Editor::editorUIUpdateTimerFired() + 547 9 WebCore::Editor::updateEditorUINowIfScheduled() + 49 10 WebCore::Editor::appliedEditing(WebCore::CompositeEditCommand&) + 1052 11 WebCore::TypingCommand::typingAddedToOpenCommand(WebCore::TypingCommand::ETypingCommand) + 120 <
rdar://problem/76761928
>
Attachments
Patch
(1.60 KB, patch)
2021-05-03 16:00 PDT
,
Julian Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julian Gonzalez
Comment 1
2021-05-03 16:00:42 PDT
Created
attachment 427609
[details]
Patch
EWS
Comment 2
2021-05-03 18:12:24 PDT
Committed
r276940
(
237273@main
): <
https://commits.webkit.org/237273@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427609
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug