Crash in WebCore::nextBoundary() https://bugs.webkit.org/show_bug.cgi?id=225326

Patch by Julian Gonzalez <julian_a_gonzalez@apple.com> on 2021-05-03
Reviewed by Ryosuke Niwa.

nextBoundary() creates a CharacterIterator and calls range() on it
without first checking if atEnd() has been reached, which can lead
to a null pointer dereference.

* editing/VisibleUnits.cpp:
(WebCore::nextBoundary):

Canonical link: https://commits.webkit.org/237273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276940 268f45cc-cd09-0410-ab3c-d52691b4dbfc